# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Add compile_fuse() and compile_unionfs_fuse()

  04 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/um/busy-config,
  arch/x86/busy-config, arch/x86_64/busy-config, defaults/busy-config:
  Enabling CONFIG_WGET and CONFIG_FEATURE_TAR_BZIP2 for initial support of
  gentoo bug 211976

  31 Oct 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Tagging a 3.4.10.901 release, for testing. Adding periods to ChangeLog to
  fix syntax hilighting.

  15 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Adding Andrew and Robin to AUTHORS.

  15 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh:
  Add dummy handler for --config in gen_cmdline.sh for Gentoo bug #237541.

  12 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  arch/alpha/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load,
  arch/ppc/modules_load, arch/ppc64/modules_load, arch/sparc/modules_load,
  arch/sparc64/modules_load, arch/um/modules_load, arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/initrd.defaults, defaults/modules_load:
  Removing scsi_wait_scan from PATA/SATA/SCSI and moving it to its own
  module group. This allows the module to be loaded last, no matter what
  combination of disks are in the system, allowing for firmware and such to
  be loaded before genkernel continues, even when asynchronous SCSI scanning
  is enabled in the kernel.

  31 Aug 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,