@@ -72,6 +72,33 @@ append_blkid(){
 	rm -rf "${TEMP}/initramfs-blkid-temp" > /dev/null
 }
 
+append_fuse() {
+	if [ -d "${TEMP}/initramfs-fuse-temp" ]
+	then
+		rm -r "${TEMP}/initramfs-fuse-temp"
+	fi
+	cd ${TEMP}
+	mkdir -p "${TEMP}/initramfs-fuse-temp/lib/"
+	tar -C "${TEMP}/initramfs-fuse-temp/lib/" -xjf "${FUSE_BINCACHE}"
+	cd "${TEMP}/initramfs-fuse-temp/"
+	find . -print | cpio ${CPIO_ARGS} --append -F "${CPIO}"
+	rm -rf "${TEMP}/initramfs-fuse-temp" > /dev/null
+}
+
+append_unionfs_fuse() {
+	if [ -d "${TEMP}/initramfs-unionfs-fuse-temp" ]
+	then
+		rm -r "${TEMP}/initramfs-unionfs-fuse-temp"
+	fi
+	cd ${TEMP}
+	mkdir -p "${TEMP}/initramfs-unionfs-fuse-temp/bin/"
+	bzip2 -dc "${UNIONFS_FUSE_BINCACHE}" > "${TEMP}/initramfs-uniwonfs-fuse-temp/bin/unionfs" ||
+		gen_die 'Could not extract unionfs-fuse binary cache!'
+	cd "${TEMP}/initramfs-unionfs-fuse-temp/"
+	find . -print | cpio ${CPIO_ARGS} --append -F "${CPIO}"
+	rm -rf "${TEMP}/initramfs-unionfs-fuse-temp" > /dev/null
+}
+
 #append_suspend(){
 #	if [ -d "${TEMP}/initramfs-suspend-temp" ];
 #	then
@@ -476,6 +503,9 @@ create_initramfs() {
 	fi
 
 	append_data 'blkid' "${DISKLABEL}"
+
+	append_data 'fuse'
+	append_data 'unionfs_fuse'
 
 	if isTrue "${SPLASH}"
 	then
