@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
+  Add append_fuse() and append_unionfs_fuse() functions
+
   12 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
   Add compile_fuse() and compile_unionfs_fuse()
 
